; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_rc80211_minstrel_debugfs.c_minstrel_add_sta_debugfs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_rc80211_minstrel_debugfs.c_minstrel_add_sta_debugfs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { i32 }
%struct.minstrel_sta_info = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"rc_stats\00", align 1
@S_IRUGO = common dso_local global i32 0, align 4
@minstrel_stat_fops = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @minstrel_add_sta_debugfs(i8* %0, i8* %1, %struct.dentry* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.dentry*, align 8
  %7 = alloca %struct.minstrel_sta_info*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.dentry* %2, %struct.dentry** %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to %struct.minstrel_sta_info*
  store %struct.minstrel_sta_info* %9, %struct.minstrel_sta_info** %7, align 8
  %10 = load i32, i32* @S_IRUGO, align 4
  %11 = load %struct.dentry*, %struct.dentry** %6, align 8
  %12 = load %struct.minstrel_sta_info*, %struct.minstrel_sta_info** %7, align 8
  %13 = call i32 @debugfs_create_file(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %10, %struct.dentry* %11, %struct.minstrel_sta_info* %12, i32* @minstrel_stat_fops)
  %14 = load %struct.minstrel_sta_info*, %struct.minstrel_sta_info** %7, align 8
  %15 = getelementptr inbounds %struct.minstrel_sta_info, %struct.minstrel_sta_info* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  ret void
}

declare dso_local i32 @debugfs_create_file(i8*, i32, %struct.dentry*, %struct.minstrel_sta_info*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
